added title to the page as well as lang='en' for accessibility reasons

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html>
+<html lang="en">
   <head>
+    <title>Seer</title>
     <style>
       @import url("https://use.typekit.net/mrn3qkc.css");
     </style>
