--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <style>
       @import url("https://use.typekit.net/mrn3qkc.css");
     </style>
-    <link rel="stylesheet" href="styles.css" / >
+    <link rel="stylesheet" href="styles.css" />
     <script src="index.js"></script>
   </head>
 
-  <body onclick="console.log('outclick')">
+  <body>
     <div id="main"></div>
 
     <video autoplay muted loop id="bgvideo">
