changed <video><source...></video> to <video src=...></video>

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
   <body>
     <div id="main"></div>
 
-    <video autoplay muted loop id="bgvideo">
-      <source src="Assets/bg.webm" type="video/webm" />
-    </video>
+    <video
+      autoplay
+      muted
+      loop
+      id="bgvideo"
+      src="Assets/bg.webm"
+      type="video/webm"
+    ></video>
 
     <template id="bubble-template">
       <div
